<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_test"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/device_msg"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:textSize="16sp"
        android:orientation="vertical"
        android:lineSpacingExtra="5dp"
        android:layout_width="match_parent"
        android:visibility="visible"
        android:background="@drawable/border"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/imgName"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/name" />

            <TextView
                android:id="@+id/device_name"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="14dp"
                android:text="@string/device_name"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="#e3e3e3" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgAddress"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/address"/>

            <TextView
                android:id="@+id/device_address"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="14dp"
                android:text="@string/mac_address"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="#e3e3e3" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:background="@drawable/border"
        android:id="@+id/humiMsg"
        android:orientation="vertical"
        android:layout_below="@+id/device_msg"
        android:layout_alignStart="@+id/device_msg">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgTem"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/tem"/>

            <TextView
                android:id="@+id/tem"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/temp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <!--<ImageView-->
                <!--android:layout_width="20dp"-->
                <!--android:layout_height="18dp"-->
                <!--android:layout_marginTop="10dp"-->
                <!--android:src="@drawable/temperature2"/>-->
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="#e3e3e3" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgHumi"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="4dp"
                android:src="@drawable/humi" />

            <TextView
                android:id="@+id/humi"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/humi"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="#e3e3e3" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgE"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/vol"/>

            <TextView
                android:id="@+id/electric"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/magnet"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="#e3e3e3" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgToken"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/token"/>

            <TextView
                android:id="@+id/device_token"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="14dp"
                android:text="@string/token"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="#e3e3e3" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/httpMsg"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_below="@id/humiMsg"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:textSize="16sp"
        android:orientation="vertical"
        android:lineSpacingExtra="5dp"
        android:layout_width="match_parent"
        android:visibility="visible"
        android:background="@drawable/border"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/httpTokenImg"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/token" />

            <TextView
                android:id="@+id/httpTokenTv"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="14dp"
                android:text="@string/http_token"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="#e3e3e3" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/tokenVerifyImg"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/done" />

            <TextView
                android:id="@+id/tokenVerify"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="14dp"
                android:text="@string/token_verify"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="#e3e3e3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/progressBarImg"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/doing"/>

            <TextView
                android:id="@+id/progressBarTv"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="14dp"
                android:text="@string/dmp_test_progress"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar"
                android:max="100"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:visibility="visible"/>

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="#e3e3e3" />

    </LinearLayout>

    <Button
        android:id="@+id/startDmpTestBtn"
        android:layout_below="@id/httpMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/start_dmp_test"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        android:background="@drawable/button_start" />

    <Button
        android:id="@+id/stopDmpTestBtn"
        android:layout_below="@id/httpMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/stop_dmp_test"
        android:textColor="#FFFFFF"
        android:background="@drawable/button_stop" />

    <Button
        android:id="@+id/DfuBtn"
        android:layout_below="@id/httpMsg"
        android:textColor="#FFFFFF"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/dfu_update"
        android:layout_marginLeft="210dp"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        android:background="@drawable/redbtn" />

    <TextView
        android:id="@+id/bottom_msg_test"
        android:layout_width="match_parent"
        android:background="#4F94CD"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:textAlignment="center"
        android:visibility="gone"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>