<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_test"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/dfu_msg"
        android:layout_marginTop="66dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="0dp"
        android:textSize="16sp"
        android:orientation="vertical"
        android:lineSpacingExtra="5dp"
        android:layout_width="match_parent"
        android:visibility="visible"
        android:background="@drawable/border"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/login"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/login_title"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="#e3e3e3" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgAddress"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/name"/>

            <TextView
                android:id="@+id/lastDfu"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/username"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/nameEt"
                android:textSize="16sp"
                android:background="@null"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_width="160dp"
                android:singleLine="true"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="#e3e3e3" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgRssi"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/token"/>

            <TextView
                android:id="@+id/device_rssi"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/userpass"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/passwordEt"
                android:textSize="16sp"
                android:background="@null"
                android:text="x"
                android:layout_marginLeft="5dp"
                android:singleLine="true"
                android:inputType="textPassword"
                android:layout_marginTop="10dp"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:imeActionLabel="Login"/>

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="#e3e3e3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/botton_border"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="#e3e3e3" />

    </LinearLayout>




    <Button
        android:id="@+id/modifyBtn"
        android:layout_below="@id/dfu_msg"
        android:textColor="#FFFFFF"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/modify_user"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:background="@drawable/yellowbtn" />

    <TextView
        android:id="@+id/bottom_msg_test"
        android:layout_width="match_parent"
        android:background="#4F94CD"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:textAlignment="center"
        android:visibility="gone"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>